--- a/favorite-things.html
+++ b/favorite-things.html
@@ -10,15 +10,41 @@
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
     <ul>
-      <li>My brother Christopher</li>
+      <li>
+        <a href="http://www.example.com/christopher.html">
+        My brother <strong>Christopher</strong>
+        <img src="img/Christopher.jpg" alt="A photo of Christopher.">
+        </a>
+      </li>
       <li>My mom and dad:
         <ul>
-          <li>Steve</li>
-          <li>Carol</li>
+          <li>
+            <a href="http://www.example.com/steve.html">
+              <strong>Steve</strong>
+              <img src="img/Steve.jpg" alt="A photo of Steve.">
+            </a>
+          </li>
+
+          <li>
+            <a href="http://www.example.com/carol.html">
+              <strong>Carol</strong>
+              <img src="img/Carol.jpg" alt="A photo of Carol.">
+            </a>
+          </li>
         </ul>
       </li>
-      <li>My friend Jessica</li>
-      <li>My friend Candy</li>
+      <li>
+        <a href="http://www.example.com/jessica.html">
+          My friend <strong>Jessica</strong>
+          <img src="img/Jessica.jpg" alt="A photo of Jessica.">
+        </a>
+      </li>
+      <li>
+        <a href="http://www.example.com/candy.html">
+          My friend <strong>Candy</strong>
+          <img src="img/Candy.jpg" alt="A photo of Candy.">
+        </a>
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
@@ -29,7 +55,7 @@
       <li>Black licorice (really!)</li>
     </ol>
 
-    <p>Thanks for reading about me!</p>  
+    <p>Thanks for reading about me!</p>
 
   </body>
 </html>
